# sparkplug-rs

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml
.github/: CODEOWNERS  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  rust.yml
protos/: sparkplug_b.proto
src/: device_message_types.rs  lib.rs  node_message_types.rs  topic_name.rs  topic_namespace.rs
