[package]
name = "sparkplug-rs"
version = "0.2.0"
edition = "2021"
license = "EPL-2.0"
readme = "README.md"
repository = "https://github.com/ahlner/sparkplug-rs"
authors = ["Philipp Ahlner <philipp@ahlner.com>"]
keywords = ["IoT", "Sparkplug", "protobuf"]
description = "Sparkplug protobuf bindings for Rust"
categories = ["api-bindings", "encoding"]
publish = true

[dependencies]
protobuf = "2.27.1"

[build-dependencies]
protoc-rust = "2.27.1"
protoc-bin-vendored = "3"
