[package]
name = "sparkplug-rs"
version = "0.3.3"
edition = "2021"
license = "EPL-2.0"
readme = "README.md"
repository = "https://github.com/ahlner/sparkplug-rs"
authors = ["Philipp Ahlner <philipp@ahlner.com>"]
keywords = ["IoT", "Sparkplug", "protobuf"]
description = "Sparkplug protobuf bindings for Rust"
categories = ["api-bindings", "encoding"]
publish = true
homepage = "https://docs.rs/sparkplug-rs/"
rust-version = "1.56.1"

[dependencies]
protobuf = "3.0.1"

[build-dependencies]
protoc-rust = "2.27.1"
protoc-bin-vendored = "3"
