[package]
name = "sparkplug-rs"
version = "0.5.0"
edition = "2021"
license = "EPL-2.0"
readme = "README.md"
repository = "https://github.com/ahlner/sparkplug-rs"
authors = ["Philipp Ahlner <philipp@ahlner.com>"]
keywords = ["IoT", "Sparkplug", "protobuf"]
description = "Sparkplug protobuf bindings for Rust"
categories = ["api-bindings", "encoding"]
publish = true
homepage = "https://docs.rs/sparkplug-rs/"
rust-version = "1.56.1"

[dependencies]
protobuf = "3.7.2"

[build-dependencies]
protobuf-codegen = "3.7.2"
